--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Test_automtion_regression_suite" class="navigator-link">
-              <span class="suite-name border-failed">Test automtion regression suite</span>
+              <span class="suite-name border-passed">Test automtion regression suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,26 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods, 2 failed,   2 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Test_automtion_regression_suite" class="hide-methods failed suite-Test_automtion_regression_suite"> (hide)</a> <!-- hide-methods failed suite-Test_automtion_regression_suite -->
-                      <a href="#" panel-name="suite-Test_automtion_regression_suite" class="show-methods failed suite-Test_automtion_regression_suite"> (show)</a> <!-- show-methods failed suite-Test_automtion_regression_suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Test_automtion_regression_suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Test_automtion_regression_suite" title="com.mydemo.SauceTestUpdated" class="method navigator-link" hash-for-method="checkAddToCartButtonTest">checkAddToCartButtonTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Test_automtion_regression_suite" title="com.mydemo.SauceTestUpdated" class="method navigator-link" hash-for-method="checkAddToCartButtonTest">checkAddToCartButtonTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Test_automtion_regression_suite -->
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -119,6 +100,16 @@
                       <a href="#" panel-name="suite-Test_automtion_regression_suite" class="show-methods passed suite-Test_automtion_regression_suite"> (show)</a> <!-- show-methods passed suite-Test_automtion_regression_suite -->
                     </span>
                     <div class="method-list-content passed suite-Test_automtion_regression_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Test_automtion_regression_suite" title="com.mydemo.SauceTestUpdated" class="method navigator-link" hash-for-method="checkAddToCartButtonTest">checkAddToCartButtonTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Test_automtion_regression_suite" title="com.mydemo.SauceTestUpdated" class="method navigator-link" hash-for-method="checkAddToCartButtonTest">checkAddToCartButtonTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Test_automtion_regression_suite" title="com.mydemo.SauceTestUpdated" class="method navigator-link" hash-for-method="checkInventoryItemTest">checkInventoryItemTest</a> <!-- method navigator-link -->
@@ -141,90 +132,26 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Test_automtion_regression_suite" class="panel Test_automtion_regression_suite">
-          <div class="suite-Test_automtion_regression_suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.mydemo.SauceTestUpdated</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="checkAddToCartButtonTest">
-                  </a> <!-- checkAddToCartButtonTest -->
-                  <span class="method-name">checkAddToCartButtonTest</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at org.testng.Assert.fail(Assert.java:96)
-	at org.testng.Assert.failNotEquals(Assert.java:776)
-	at org.testng.Assert.assertTrue(Assert.java:44)
-	at org.testng.Assert.assertTrue(Assert.java:54)
-	at com.mydemo.SauceTestUpdated.checkAddToCartButtonTest(SauceTestUpdated.java:34)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:564)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.access$000(SuiteRunner.java:40)
-	at org.testng.SuiteRunner$SuiteWorker.run(SuiteRunner.java:489)
-	at org.testng.internal.thread.ThreadUtil$1.call(ThreadUtil.java:52)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
-	at java.base/java.lang.Thread.run(Thread.java:832)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="checkAddToCartButtonTest">
-                  </a> <!-- checkAddToCartButtonTest -->
-                  <span class="method-name">checkAddToCartButtonTest</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at org.testng.Assert.fail(Assert.java:96)
-	at org.testng.Assert.failNotEquals(Assert.java:776)
-	at org.testng.Assert.assertTrue(Assert.java:44)
-	at org.testng.Assert.assertTrue(Assert.java:54)
-	at com.mydemo.SauceTestUpdated.checkAddToCartButtonTest(SauceTestUpdated.java:34)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:564)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.access$000(SuiteRunner.java:40)
-	at org.testng.SuiteRunner$SuiteWorker.run(SuiteRunner.java:489)
-	at org.testng.internal.thread.ThreadUtil$1.call(ThreadUtil.java:52)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
-	at java.base/java.lang.Thread.run(Thread.java:832)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Test_automtion_regression_suite-class-failed -->
           <div class="suite-Test_automtion_regression_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">com.mydemo.SauceTestUpdated</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkAddToCartButtonTest">
+                  </a> <!-- checkAddToCartButtonTest -->
+                  <span class="method-name">checkAddToCartButtonTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="checkAddToCartButtonTest">
+                  </a> <!-- checkAddToCartButtonTest -->
+                  <span class="method-name">checkAddToCartButtonTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="checkInventoryItemTest">
@@ -316,26 +243,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'checkAddToCartButtonTest')
+data.setCell(0, 1, 'checkInventoryItemTest')
 data.setCell(0, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(0, 3, 24116);
+data.setCell(0, 3, 4227);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'checkAddToCartButtonTest')
+data.setCell(1, 1, 'checkInventoryItemTest')
 data.setCell(1, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(1, 3, 22564);
+data.setCell(1, 3, 3681);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'checkInventoryItemTest')
+data.setCell(2, 1, 'checkAddToCartButtonTest')
 data.setCell(2, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(2, 3, 3215);
+data.setCell(2, 3, 3632);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'checkInventoryItemTest')
+data.setCell(3, 1, 'checkAddToCartButtonTest')
 data.setCell(3, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(3, 3, 2978);
+data.setCell(3, 3, 2945);
 window.suiteTableData['Test_automtion_regression_suite']= { tableData: data, tableDiv: 'times-div-Test_automtion_regression_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 52 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Test_automtion_regression_suite">
               </div> <!-- times-div-Test_automtion_regression_suite -->
             </div> <!-- times-div -->
@@ -363,56 +290,52 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.mydemo.SauceTestUpdated</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setUp(Firefox, 80.0, Windows, 10, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkInv...)</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
                 <span class="method-name">setUp(Chrome, 85.0, OS X, Catalina, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkI...)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp(Firefox, 80.0, Windows, 10, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkInv...)</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">checkInventoryItemTest</span>
-                <span class="method-start">9448 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">checkInventoryItemTest</span>
-                <span class="method-start">12702 ms</span>
+                <span class="method-start">7285 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown([TestResult name=checkInventoryItemTest status=SUCCESS method=SauceTestUpdated.checkInventoryItemTes...)</span>
-                <span class="method-start">14072 ms</span>
+                <span class="method-start">12677 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">checkInventoryItemTest</span>
+                <span class="method-start">15342 ms</span>
+              </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(Chrome, 85.0, OS X, Catalina, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkA...)</span>
-                <span class="method-start">15580 ms</span>
+                <span class="method-start">15770 ms</span>
               </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">checkAddToCartButtonTest</span>
+                <span class="method-start">21466 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest status=SUCCESS method=SauceTestUpdated.checkAddToCartButto...)</span>
+                <span class="method-start">26018 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown([TestResult name=checkInventoryItemTest status=SUCCESS method=SauceTestUpdated.checkInventoryItemTes...)</span>
-                <span class="method-start">17569 ms</span>
+                <span class="method-start">27525 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(Firefox, 80.0, Windows, 10, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkAdd...)</span>
-                <span class="method-start">18724 ms</span>
+                <span class="method-start">30414 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">checkAddToCartButtonTest</span>
-                <span class="method-start">19850 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">checkAddToCartButtonTest</span>
-                <span class="method-start">34511 ms</span>
+                <span class="method-start">57762 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest status=FAILURE method=SauceTestUpdated.checkAddToCartButto...)</span>
-                <span class="method-start">44009 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest status=FAILURE method=SauceTestUpdated.checkAddToCartButto...)</span>
-                <span class="method-start">60492 ms</span>
+                <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest status=SUCCESS method=SauceTestUpdated.checkAddToCartButto...)</span>
+                <span class="method-start">64592 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
